--- a/style.css
+++ b/style.css
@@ -4,27 +4,37 @@ body{
 
 header {
     background-color: aliceblue;
-    padding: 20px 0;
+    padding: 10px 0;
 }
 
-.caja{
-    width: 940px;
+.caja {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     position: relative;
     margin: 0 auto;
 }
 
 .perfil{
-    width: 25%;
+    width: 30%;
+    margin-left: 30px;
 }
 
 nav{
     position: absolute;
-    top:110px;
+    top:10px;
     right: 0;
 }
 
+nav ul {
+    list-style: none;
+    padding: 60px 60px;
+    margin: 0;
+}
+
 nav li{
-    display: inline;
+    display: inline-block;
     margin: 0 0 0 15px;
 }
 
@@ -37,7 +47,8 @@ nav a{
     text-decoration: none;
 }
 
-nav a:hover{
+nav a:hover,
+.contenido-contacto li a:hover{
     color: #c78c19;
     text-decoration: underline;
 }
@@ -49,7 +60,7 @@ nav a:hover{
 }
 
 .contenido-habilidades{
-    width: 940px;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -61,7 +72,6 @@ nav a:hover{
     text-align: center;
     font-size: 2em;
     margin: 1em 0 1em;
-    clear:left;
     font-weight: bold;
 }
 
@@ -72,22 +82,27 @@ nav a:hover{
 
 
 .tecnologias{
-    width: 940px;
+    width: 100%;
     margin: 0 auto;
     padding: 50px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 
 .tecnologias li{
-    display: inline-block;
-    text-align: center;
-    width: 20%;
-    vertical-align: top;
-    margin: 0 1.5%;
-    padding: 30px 20px;
+    width: 100%;
+    max-width: 200px;
+    height: 200px; /* Ajusta la altura según tus necesidades */
     box-sizing: border-box;
+    padding: 2%;
+    margin: 0 1.5% 8%;
     border: 2px solid #000000;
     border-radius: 10px;
+    overflow: hidden; /* Para que las imágenes no sobresalgan del contenedor */
+    display: flex;
+    align-items: center;
 }
 
 .tecnologias li:hover{
@@ -101,14 +116,6 @@ nav a:hover{
 }
 
 
-.tecnologias li img{
-    width: 115px;
-    height: 115px;
-    transition: 400ms;
-
-}
-
-
 .hobbies{
     padding: 3em 0;
     background: linear-gradient(aliceblue, #307795);
@@ -119,7 +126,7 @@ nav a:hover{
 }
 
 .contenido-hobbies{
-    width: 640px;
+    width: 80%;
     margin: 0 auto;
     margin-bottom: 20px;
 }
@@ -160,18 +167,25 @@ nav a:hover{
     background:linear-gradient( #307795, aliceblue);
 }
 
-.tam-certificados{
-    width: 940px;
-    margin: 0 auto;
+
+.carousel-inner {
+    padding: 15%;
 }
 
-.contenido-certificados img{
-    width: 49%;
-    display: inline-block;
-    text-align: center;
-    vertical-align: top;
-    padding: 30px 20px;
-    box-sizing: border-box;
+.custom-carousel-img {
+    width: 80%; /* Ajusta el tamaño de la imagen según tus necesidades */
+    margin: 0 auto; /* Centra la imagen horizontalmente */
+    padding: 10px; /* Agrega el padding deseado alrededor de la imagen */
+    box-sizing: border-box; /* Asegura que el padding no afecte el tamaño total de la imagen */
+}
+
+#carouselExampleDark .carousel-indicators button {
+    background-color: #fff;
+    border: 2px solid #000;
+}
+
+#carouselExampleDark .carousel-indicators .active {
+    background-color: #000;
 }
 
 .proyectos{
@@ -179,29 +193,31 @@ nav a:hover{
     background: linear-gradient(aliceblue, #307795);
 }
 
-.contenido-certificados, .contenido-contacto{
-    width: 940px;
+.contenido-contacto{
+    width: 100%;
     margin: 0 auto;
     padding: 50px;
 }
 
 
 .contenido-proyectos {
-    width: 940px;
-    margin: 20%;
+    width: 100%;
+    text-align: center;
 }
 
+.contenido-proyectos h2{
+    padding-top: 5%;
+}
 
-.contenido-proyectos li{
+.contenido-proyectos li {
     display: inline-block;
     text-align: center;
     width: 80%;
-    vertical-align: top;
-    margin: 0 1.5%;
-    padding: 30px 20px;
+    margin: 0 auto; /* Centra el bloque en el contenedor */
     box-sizing: border-box;
     border: 2px solid #000000;
     border-radius: 10px;
+    overflow: hidden; /* Añade esto para asegurarte de que no haya desbordamiento visible */
 }
 
 .contenido-proyectos li:hover{
@@ -215,11 +231,21 @@ nav a:hover{
 }
 
 
-.contenido-proyectos li img, .contacto img{
-    width: 230px;
-    height: 300px;
+.contenido-proyectos li img,
+ 
+ .tecnologias li img {
+    width: 100%;
+    height: auto;
+    max-height: 100%;
     transition: 400ms;
+    padding: 10%;
 
+}
+
+.contacto img{
+    width: 100%;
+    max-width: 100px;
+    height: 100px; /* Ajusta la altura según tus necesidades */
 }
 
 .contenido-proyectos h2{
@@ -227,11 +253,34 @@ nav a:hover{
     padding-bottom: 20px;
 }
 
-.proyecto-descripcion{
+.proyecto-descripcion a {
+    color: #fff;
+    text-decoration: none;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+.proyecto-descripcion a:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+}
+
+.proyecto-descripcion {
     font-size: 18px;
     width: auto;
-    padding: 50px;
+    padding: 10%;
+    color: #2c210c;
+    font-weight: bold;
 }
+
+.proyecto-item {
+    list-style: none;
+    margin: 0;
+}
+
+.proyectos {
+    text-align: center;
+}
+
+
 
 .contacto{
     padding: 3em 0;
@@ -243,9 +292,21 @@ nav a:hover{
     text-align: center;
 }
 
+.contenido-contacto a,
+.proyecto-descripcion,
+.contenido-proyectos li a {
+    text-decoration: none;
+    color:black;
+}
+
+.titulos-proyectos {
+    text-decoration:none;
+    color:rgb(173, 170, 8);
+}
+
 .contenido-contacto li img{
-    width: 115px;
-    height: 115px;
+    width: 15%;
+    height: 15%;
 }
 
 footer{
@@ -257,13 +318,14 @@ footer{
 
 .copyright{
     color:#FFFFFF;
-    font-size: 13px;
-    margin:20px;
+    font-size: auto;
+    padding:20px;
+    background: #307795;
 }
 
 
 
-@media screen and (max-width:480px){
+@media only screen and (max-width:768px){
     h1{
         text-align: center;
     }
@@ -273,9 +335,41 @@ footer{
     .caja, .principal, .mapa-contenido, .contenido-diferenciales, .video {
         width: auto;
     }
+
+    .tecnologias li {
+        max-width: 120px;
+        height: 120px; /* Ajusta la altura según tus necesidades */
+    }
     .lista-diferenciales, .imagen-diferenciales{
         width: 100%;
     }
 
-}
+    .caja {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
+    .perfil {
+        width: 40%;
+        margin-bottom: 10px;
+        margin-left: auto;
+        align-items: center;
+    }
+
+    nav {
+        position: static;
+        margin-top: 20px;
+        text-align: center;
+        width: 100%;
+        
+    }
+
+    nav ul {
+        padding: 0px;
+    }
+
+    nav li {
+        display: block;
+        margin: 5px 0;
+    }
+}
